--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,8 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0002 (xxxxxxxxxxxxxxx):
 
+- Browser is added using the really-limited JEditorPane class.
+- Border style is now supported for scale.
 - SnippetLauncher now offers a filter box.
 - Combo box size is constrained in height.
 - Border style for scale is supported.
