--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,8 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0002 (xxxxxxxxxxxxxxx):
 
+- Word wraps in MessageBox after a maximum predefined length.
+- Vertical style for ToolBar is honored.
 - Selection event is now sent upon selection of a combo item.
 - Fixed a problem when some events were sent and the tree was empty.
 - removeXXX() methods are implemented.
