--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0002 (xxxxxxxxxxxxxxx):
 
+- Wrapping is now honored in multi line Text widget.
 - Word wraps in MessageBox after a maximum predefined length.
 - Vertical style for ToolBar is honored.
 - Selection event is now sent upon selection of a combo item.
