--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
+- Shells are forced to paint the when they are shown to fix splashscreen issues.
 - Basic Table event handling is added.
 - Traversal keys general implementation is in place.
 
