--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
+- Background and foreground are supported for Text.
 - Font chooser is implemented.
 - More methods are implemented for the Table and Tree widget.
 - Table header visibility and height are now working as expected.
