Change log is updated.

--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,7 +7,10 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
-- Duplicate monitors are filtered out and their client area is now correct.
+- Color dialog is now working as expected.
+- Fixed an application freeze when closing a dialog in real dispatching mode.
+- Duplicate monitors are filtered out when getting the monitors.
+- The client areas of the monitors are now correct.
 - Setting an icon on a radio button does not remove the radio icon.
 - null text is never returned for a Button.
 - Some timers are removed to restore original performance.
