--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,8 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
+- Default combo box size is fixed.
+- Label wrapping is fixed.
 - Combo and List selection events are not sent when initiated programmaticaly.
 - Multi line messages are now supported in the MessageBox.
 - Color dialog is now working as expected.
