--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
+- Table's VIRTUAL style is mostly supported.
 - The "swt.swing.laf.decorated" can force L&F decorations with "true"/"false".
 - Default combo box size is fixed.
 - Label wrapping is fixed.
@@ -17,6 +18,7 @@ Licence terms: EPL 1.0 (see licence.html)
 - Duplicate monitors are filtered out when getting the monitors.
 - The client areas of the monitors are now correct.
 - Setting an icon on a radio button does not remove the radio icon.
+- null text is never returned for a Label.
 - null text is never returned for a Button.
 - Some timers are removed to restore original performance.
 - Background and foreground are supported for Text.
