--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
 
+- Client area omited some insets, which is now fixed.
 - Table's VIRTUAL style is mostly supported.
 - The "swt.swing.laf.decorated" can force L&F decorations with "true"/"false".
 - Default combo box size is fixed.
