--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -5,7 +5,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 ---------------------------------- Change log ----------------------------------
 
-* Version 3.2.0003 (xxxxxxxxxxxxxxxxx):
+* Version 3.2.0003 (September 15, 2006):
 
 - SystemSelection clipboard does not throw NPE if not supported.
 - Display does not tell to sleep if it is disposed.
