--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- The class cast when closing a dialog in fake dispatch mode seems to be fixed.
 - JCoolBar.isLocked() does not call itself anymore.
 
 
