--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- The tree widget is mostly implemented.
 - The Table listener for component events is corrected to be the container.
 - Non-ASCII characters are defined using their unicode value.
 - The class cast when closing a dialog in fake dispatch mode seems to be fixed.
