--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- Toolbar's height is constrained to its preferred value.
 - Graphic context coordinates are adjusted.
 - Table headers for Tree do not show anymore on some look and feels.
 - The tree widget is mostly implemented.
