--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- Mnemonics are fixed for tab items.
 - Null images can be set on tree items.
 - Display's mapping method for rectangle is fixed.
 - Toolbar's height is constrained to its preferred value.
