--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- Printing is now a stub, instead of the win32 version.
 - Only 3 cursors use custom images now, the others now use one that resembles.
 - Item removal in Tree is fixed.
 - Mnemonics are fixed for tab items.
