--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -14,7 +14,7 @@ Licence terms: EPL 1.0 (see licence.html)
 - Only 3 cursors use custom images now, the others now use one that resembles.
 - Item removal in Tree is fixed.
 - Mnemonics are fixed for tab items.
-- Null images can be set on tree items.
+- Null images can be set on tree items, tree columns and table columns.
 - Display's mapping method for rectangle is fixed.
 - Toolbar's height is constrained to its preferred value.
 - Graphic context coordinates are adjusted.
