--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0004 (xxxxxxxxxxxxxxxxxx):
 
+- Default selection for Tree is added.
 - Layout is reviewed with some forced events to comply with expected behaviour.
 - CTRL+SHIFT+F2 debugging facility that dumps control tree is added.
 - Dialogs are non focusable now.
