TableItem.getText(int) does not return null.

--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -5,6 +5,11 @@ Licence terms: EPL 1.0 (see licence.html)
 
 ---------------------------------- Change log ----------------------------------
 
+* Version 3.2.0005 (xxxxxxxxxxxxxxx):
+
+- TableItem.getText(int) does not return null.
+
+
 * Version 3.2.0004 (October 2, 2006):
 
 - Modifiers are not repeated when key is stuck.
