Bug affecting the row count of a Table is fixed.

--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -8,7 +8,7 @@ Licence terms: EPL 1.0 (see licence.html)
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
 - Gradient for title is adjusted.
-- Bug affecting the row count of a Table should be fixed.
+- Bug affecting the row count of a Table is fixed.
 - Apple menu bar system property is on by default.
 
 
