--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Ctrl+Shift+<char> now sets the keycode correctly.
 - Setting the selection in a Tree repaints it to actually see the change.
 - Tool items are not focusable.
 - Group does not show the '&' when there is a mnemonic.
