--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,9 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Focus improvements when shells are opening.
+- More of the tab traversal functionality is implemented.
+- Coolbar content's height is improved for some buggy cases.
 - StyledText visual bug is fixed.
 - Some internal UI threading code is moved out of Display to its own util class.
 - Updating the text of a Group now repaints to show the change.
