--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Scroll bar visibility now affect the parent scrollpane policies.
 - Table items were not removed properly when removing a range.
 - Table items can now be cleared.
 - Few fixes to the key filtering.
