- Stroke attributes in GC were not always used. - GC painting to a frame when it opens does not get overwritten by some paint events.

--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,8 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Stroke attributes in GC were not always used.
+- GC painting to a frame when it opens does not get overwritten by some paint events.
 - A file can now be launched.
 - Right mouse click selects the table row if it is not selected.
 - Right mouse click selects the tree node if it is not selected.
