--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Image handling is much improved.
 - Inserting columns in a table set the order properly.
 - Mouse location and item bounds are now correct on a table with scroll pane.
 - A Border is shown for a tool shell with trimming.
