--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Focus handling is improved.
 - HTML quality rendering is improved.
 - Text field with multiple lines has now the same style as a single-line one.
 - Link style is like a label now.
