--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Guard against exceptions/errors in the event loop.
 - Some conditions for range checking were wrong in List. This is fixed.
 - Focus handling is improved.
 - HTML quality rendering is improved.
