--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- Drag and drop is improved.
 - Table sorting is implemented.
 - Table packing is improved.
 - Flags handling in GC.drawText(...) is improved.
