--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0005 (xxxxxxxxxxxxxxx):
 
+- A child Shell is shown on the same monitor as the parent (visible hack though)
 - RADIO exclusions in Composite and ToolBar is improved.
 - Radio button group navigation with keyboard is implemented.
 - Drag and drop is improved.
