--- a/SWTSwing/Release/changelog.txt
+++ b/SWTSwing/Release/changelog.txt
@@ -7,6 +7,7 @@ Licence terms: EPL 1.0 (see licence.html)
 
 * Version 3.2.0006 (xxxxxxxxxxxxxxx):
 
+- Regression: hovering the tray item was generating exceptions.
 - General speed for monitor properties is improved.
 - Display bounds are fixed for multiple monitors.
 - Synchronisation execution was done in a wrong place. 
